re2c/cmd_deserialize.re2c
#include <stdint.h>
#include <string.h>
#include <assert.h>

// re2 >= 1.2
// re2c -8 re2c/cmd_deserialize.re2c --input-encoding utf8 --tags -o src/cmd_deserialize.c

/*!max:re2c*/

static void cmd_deserialize_push(uint8_t *start, uint8_t *end, char *tokens[], int position )
{
    *end = '\0';
    tokens[position] = (char *)start;
}

int cmd_deserialize(unsigned char *str, char *tokens[])
{
assert(str);
assert(tokens);

int tokens_count = 0;
uint8_t *YYMARKER = NULL;
uint8_t *YYLIMIT = (str + strlen((char*)str));
uint8_t *t1, *t2;
/*!stags:re2c format = 'uint8_t *@@;'; */
loop:
/*!re2c
re2c:define:YYCTYPE = uint8_t;
re2c:define:YYCURSOR = str;
re2c:yyfill:enable = 0;
re2c:eof = 0;

$ { goto end; }

whitespace = [ \n\t\v\f]+;
token = [^ \n\t\v\f]+;

@t1 token @t2 whitespace? { cmd_deserialize_push(t1, t2, tokens, tokens_count++ ); goto loop; }
*/
end:
    return tokens_count;
}
